--- a/Android Application/Licenta/Licenta/Licenta/app/build.gradle
+++ b/Android Application/Licenta/Licenta/Licenta/app/build.gradle
@@ -25,10 +25,13 @@ dependencies {
     compile 'com.android.support:design:27.0.0'
     compile 'com.android.support:recyclerview-v7:27.+'
     compile 'com.android.support:multidex:1.0.0'
-    compile 'com.google.firebase:firebase-core:16.0.0'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.firebaseui:firebase-ui-database:3.3.1'
-    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    compile 'com.google.firebase:firebase-core:12.0.1'
+    compile 'com.google.firebase:firebase-database:12.0.1'
+    compile 'com.google.firebase:firebase-messaging:12.0.1'
+    compile 'com.google.android.gms:play-services-base:12.0.1'
+    compile 'com.google.android.gms:play-services-location:12.0.1'
+    compile 'com.google.android.gms:play-services-maps:12.0.1'
+   // compile 'com.google.maps.android:android-maps-utils:0.5.+'
 }
 
 apply plugin: 'com.google.gms.google-services'
